# mylink-backend-api

./: .env  .env.development  .env.production  .gitignore  Cargo.toml  Makefile.toml
domain/: Cargo.toml
domain/migrations/: 20250626113700_create_user.up.sql
domain/src/: lib.rs
domain/src/entities/: user.rs
domain/src/models/users/: mod.rs  user_create_model.rs
domain/src/repository/: mod.rs  user_pg_repository.rs
domain/src/repository/contracts/: user_repository.rs
utils/: Cargo.toml
utils/src/: password_hasher.rs
utils/src/security/: jwt_manager.rs
webapi/: Cargo.toml
webapi/src/: main.rs
webapi/src/base/: api_response.rs  app_state.rs  configuration.rs  cors_config.rs  mod.rs  pg_connection.rs  user_claims.rs
webapi/src/extractors/: auth.rs
webapi/src/handlers/auth/: mod.rs  sign_in.rs  sign_in_request.rs  sign_up.rs  sign_up_request.rs  signup.rs
webapi/src/handlers/post/: create.rs  get_all.rs  mod.rs
webapi/src/messages/: common.rs  mod.rs  post.rs
webapi/src/routes/: api_docs.rs  mod.rs
webapi/src/routes/auth/: route.rs
webapi/src/routes/post/: route.rs
