[workspace]
members = [
   "utils",
   "domain",
   "webapi"
]

resolver="2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
chrono = "0.4.41"
anyhow = "1.0.98"
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"] }