[package]
name = "webapi"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
domain= { path= "../domain" }

axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15"
once_cell = "1.21"
utoipa = {version= "5.3.1", features= ["axum_extras"]}
utoipa-swagger-ui = {version="9.0.2", features=["axum"]}
utoipa-axum = "0.2.0"
axum-valid = "0.23.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["catch-panic", "cors"] }
tower = "0.5.2"
http-body-util = "0.1.3"
bytes = "1.10.1"

validator= { workspace = true}
async-trait = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }

